bugfix on smaller screen sizes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,6 +76,8 @@ html {
 }
 
 body {
+    max-width: 100%;
+    max-height: 100%;
     font-family: 'Open Sans', sans-serif;
     font-size: 1.6rem;
 }
@@ -456,6 +458,7 @@ textarea {
     
     .section {
         width: 100%;
+        height: 100%;
     }
 
     .home-content {
@@ -477,12 +480,14 @@ textarea {
 
     .gallery-img {
         width: 100%;
+        height: 100%;
         max-width: 100%;
         max-height: 100%;
     }
 
     .gallery-img img {
         width: 100%;
+        height: 100%;
     }
 
     .grid-one-content {
@@ -491,7 +496,7 @@ textarea {
 
     .contact-content {
         grid-template-rows: 1fr 0.5fr;
-        max-height: 40rem;
+        max-height: 120rem;
     }
     
 }
@@ -525,12 +530,14 @@ textarea {
 
     .gallery-img {
         width: 100%;
+        width: 100%;
         max-width: 100%;
         max-height: 100%;
     }
 
     .gallery-img img {
         width: 100%;
+        height: 100%;
     }
 
     .menu {
@@ -588,12 +595,9 @@ textarea {
         top: 2rem;
     }
 
-    #contact {
-    }
 
     .contact-content {
         grid-template-rows: 1fr 0.5fr;
-        max-height: 10rem;
     }
 
     .contact.form {
